--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "ac_math"]
+    path = ac_math
     url = https://github.com/hlslibs/ac_math
 
 [submodule "ac_types"]
+    path = ac_types
     url = https://github.com/hlslibs/ac_types
 
